  * Fixes hydrogenbonds tutorial path to point to hbonds (Issue #4285, PR #4286)

Enhancements
  * Updated lib.qcprot.CalcRMSDRotationalMatrix to accept either float32 or float64
    inputs
  * Added a warning about charge neutrality to the documentation of
    `DielectricConstant` (Issue #4262, PR #4263)
  * Add support for reading chainID info from prmtop amber topologies (PR #4007)

Changes
  * The `mda-xdrlib` module is now a core dependency of MDAnalysis
    replacing the now deprecated `xdrlib` core Python library
    (PR #4271)
  * ConverterBase class moved from coordinates/base.py to converters/base.py (Issue #3404)

Deprecations
  * coordinates.base.ConverterBase has been deprecated and will be removed in 3.0.0;
    use converters.base.ConvertBase instead (Issue #3404)


28/08/23 IAlibay, hmacdope, pillose, jaclark5, tylerjereddy

 * 2.6.1

Fixes
  * Fix Atom type guessing error (PR #4168, Issue #4167)

Enhancements
  * Allow `set_dimensions` transformation to handle NPT trajectories (PR #4258)

Changes
  * Reverts PR #4108, builds are now again made using the oldest
    supported NumPy version.
  * NumPy `in1d` replaced with `isin` in preparation for NumPy
    `2.0` (PR #4255)
  * Update documentation for SurvivalProbabilty to be more clear
    (Issue #4247)
  * Cython DEF statments have been replaced with compile time integer constants
    as DEF is deprecated as of Cython>=3.0 (Issue #4237, PR #4246)

Deprecations


08/15/23 IAlibay, jaclark5, MohitKumar020291, orionarcher, xhgchen,
         ztimol, orbeckst

 * 2.6.0

Fixes
  * Fix AtomGroup.center_of_charge(..., unwrap=True) giving
    inconsistent (but scientifically correct) results on Intel macOS
    (Issue #4211)
  * Fix Boltzmann typo in `units.py` (PR #4214, Issue #4213)
  * Fix deletion of bond/angle/dihedral types (PR #4003, Issue #4001)
  * CRD, PQR, and PDBQT writers now write BZ2 and GZ files if requested
    (PR #4163, Issue #4159)

Enhancements