@@ -33,6 +33,7 @@ Enhancements
   * Added a warning about charge neutrality to the documentation of
     `DielectricConstant` (Issue #4262, PR #4263)
   * Add support for reading chainID info from prmtop amber topologies (PR #4007)
+  * Adds external sidebar links (Issue #4296)
 
 Changes
   * The `mda-xdrlib` module is now a core dependency of MDAnalysis
